--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outos planos.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <img src="Plataformas.png" alt="plataformas da alura" class="secundario__imagem">
+        <div class="container__descricao">
+            
+        </div>
+
+    </section>
 </body>
 
 </html>
