--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <section class="container secundario">
         <img src="Plataformas.png" alt="plataformas da alura" class="secundario__imagem">
         <div class="container__descricao">
-            
+            <h2 class="descricao__titulo">assista do seu jeito</h2>
+            <p class="descricao__texto">aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa selecao de curso nao para de crescer</p>
         </div>
 
     </section>
